// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search many no results should return "null" 1`] = `null`;

exports[`Search many search first page should return an object representing the results 1`] = `
Object {
  "documents": Array [
    Object {
      "title": "book1",
    },
  ],
  "page": Object {
    "count": 10,
    "curr": 1,
    "next": 2,
    "number": 1,
    "pages": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "params": "c=10&q=vampire&s=title&t=quick",
    "prev": 0,
    "query": "vampire",
    "range": 1,
    "skip": 0,
    "sort": "title",
    "total": 100,
    "type": "quick",
  },
  "total": Array [
    Object {
      "count": 100,
    },
  ],
}
`;

exports[`Search many search last page should return an object representing the results 1`] = `
Object {
  "documents": Array [
    Object {
      "title": "book1",
    },
  ],
  "page": Object {
    "count": 10,
    "curr": 100,
    "next": 0,
    "number": 100,
    "pages": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "params": "c=10&q=vampire&s=title&t=quick",
    "prev": 99,
    "query": "vampire",
    "range": 991,
    "skip": 990,
    "sort": "title",
    "total": 100,
    "type": "quick",
  },
  "total": Array [
    Object {
      "count": 100,
    },
  ],
}
`;

exports[`Search many search minimum amount of parameters should return an object representing the results 1`] = `
Object {
  "documents": Array [
    Object {
      "title": "book1",
    },
  ],
  "page": Object {
    "count": 10,
    "curr": 1,
    "next": 2,
    "number": 1,
    "pages": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "params": "q=vampire&t=quick&c=10&s=title",
    "prev": 0,
    "query": "vampire",
    "range": 1,
    "skip": 0,
    "sort": "title",
    "total": 100,
    "type": "quick",
  },
  "total": Array [
    Object {
      "count": 100,
    },
  ],
}
`;

exports[`Search many tag first page should return an object representing the results 1`] = `
Object {
  "documents": Array [
    Object {
      "title": "book1",
    },
  ],
  "page": Object {
    "count": 10,
    "curr": 1,
    "next": 2,
    "number": 1,
    "pages": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "params": "c=10&q=vampire&s=title&t=tag",
    "prev": 0,
    "query": "vampire",
    "range": 1,
    "skip": 0,
    "sort": "title",
    "total": 100,
    "type": "tag",
  },
  "total": Array [
    Object {
      "count": 100,
    },
  ],
}
`;

exports[`Search many tag last page should return an object representing the results 1`] = `
Object {
  "documents": Array [
    Object {
      "title": "book1",
    },
  ],
  "page": Object {
    "count": 10,
    "curr": 100,
    "next": 0,
    "number": 100,
    "pages": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "params": "c=10&q=vampire&s=title&t=tag",
    "prev": 99,
    "query": "vampire",
    "range": 991,
    "skip": 990,
    "sort": "title",
    "total": 100,
    "type": "tag",
  },
  "total": Array [
    Object {
      "count": 100,
    },
  ],
}
`;

exports[`Search many tag minimum amount of parameters should return an object representing the results 1`] = `
Object {
  "documents": Array [
    Object {
      "title": "book1",
    },
  ],
  "page": Object {
    "count": 10,
    "curr": 1,
    "next": 2,
    "number": 1,
    "pages": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ],
    "params": "q=vampire&t=tag&c=10&s=title",
    "prev": 0,
    "query": "vampire",
    "range": 1,
    "skip": 0,
    "sort": "title",
    "total": 100,
    "type": "tag",
  },
  "total": Array [
    Object {
      "count": 100,
    },
  ],
}
`;
